--- a/public/assets/css/messagerie.css
+++ b/public/assets/css/messagerie.css
@@ -51,6 +51,9 @@ img {
 .user-item {
     display: flex;
     align-items: center;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
     padding: 10px;
     border-bottom: 1px solid #333;
     cursor: pointer;
@@ -102,6 +105,7 @@ img {
 .user-item span {
     display: block;
     min-width: 250px;
+    max-width: 400px;
     text-align: left;
     overflow: hidden; 
     white-space: nowrap; 
