--- a/views/pages/projects.twig
+++ b/views/pages/projects.twig
@@ -122,8 +122,8 @@
 						<div class="modal-content">
 							<span class="closeModal">&times;</span>
 							<p class="modal-body"></p>
-							<button id="confirmDelete-confirmModal">Oui</button><br>
-							<button id="confirmCancel-confirmModal">Non</button>
+							<button id="confirmDelete-confirmModal">Supprimer</button><br>
+							<button id="confirmCancel-confirmModal">Annuler</button>
 						</div>
 					</div>
 
