--- a/views/pages/projects.twig
+++ b/views/pages/projects.twig
@@ -30,6 +30,7 @@
 							<h2 class="editable-title" contenteditable="false">{{ project.name }}</h2>
 							<div class="menu-dropdown" id="menu-dropdown-{{ project.id_project }}" style="display: none;">
 								{% if project.role == 'owner' %}
+								<span class="close-dropdown" id="close-dropdown-{{ project.id_project }}">x</span>
 									<h2>Que souhaitez-vous ?</h2><br>
 									<button class="edit-project" data-dropdown-id="{{ project.id_project }}">Modifier</button>
 									<form action="/project/delete/{{ project.id_project }}" method="POST" class="delete-form">
