--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -3,14 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:title" content="Titre de votre vidéo">
-		<meta property="og:description" content="Description de votre vidéo">
-		<meta property="og:image" content="URL de l'image d'aperçu de la vidéo">
-		<meta property="og:video" content="URL de la vidéo">
+		<meta property="og:title" content="{{ content.name }}">
+		<meta property="og:description" content="{{ content.description }}">
+		<meta property="og:image" content="{{ content.thumbnail_url ?: '/assets/imgs/default-thumbnail.jpg' }}">
+		<meta property="og:video" content="{{ '/uploads/' ~ content.url }} ">
 		<meta property="og:video:type" content="video/mp4">
 		<meta property="og:video:width" content="1280">
 		<meta property="og:video:height" content="720">
 		<meta property="og:type" content="video.other">
+
+		<meta name="twitter:card" content="player">
+		<meta name="twitter:title" content="{{ content.name }}">
+		<meta name="twitter:description" content="{{ content.description }}">
+		<meta name="twitter:image" content="{{ content.thumbnail_url ?: '/assets/imgs/default-thumbnail.jpg' }}">
+		<meta name="twitter:player" content="{{ '/uploads/' ~ content.url }} ">
+		<meta name="twitter:player:width" content="1280">
+		<meta name="twitter:player:height" content="720">
+
 
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 		<link rel="icon" href="/../../assets/imgs/LogoBlackRemoveBg.png" type="logoPulse">
@@ -26,7 +35,8 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 		{% block style %}{% endblock %}
-		{% block title %}Pulse Connect{% endblock %}
+		{% block title %}Pulse Connect
+		{% endblock %}
 	</head>
 	<body>
 		{% block main %}{% endblock %}
