update mediaFile to file

--- a/views/pages/addContent.twig
+++ b/views/pages/addContent.twig
@@ -39,7 +39,7 @@
 		<div>
 			<div class="custom-file">
 				<label for="mediaFile" id="fileLabel">Aucun fichier sélectionné</label>
-				<input type="file" id="mediaFile" name="mediaFile" accept="image/*,video/*,audio/*" multiple required>
+				<input type="file" id="mediaFile" name="file" accept="image/*,video/*,audio/*" multiple required>
 			</div>
 			<div id="filePreview" class="file-preview">
 				<img id="imagePreview" style="display: none; max-width: 100%; margin: 10px 0;">
