--- a/public/assets/css/addContent.css
+++ b/public/assets/css/addContent.css
@@ -166,7 +166,7 @@ button:hover {
 @media (max-width: 768px) {
     form {
         position: absolute;
-        top: 0;
+        top: -5%;
         width: 80%;
     }
 }
