--- a/public/assets/css/addContent.css
+++ b/public/assets/css/addContent.css
@@ -53,7 +53,6 @@ label {
     font-size: 1em;
     color: aquamarine;
     display: block;
-    margin-bottom: 5px;
 }
 
 input[type="text"],
@@ -137,7 +136,7 @@ button:hover {
 .custom-file::before {
     content: 'Choisir un fichier';
     display: inline-block;
-    background-color: aquamarine;
+    background-color: #88c0fc;
     color: black;
     padding: 10px;
     border-radius: 5px;
@@ -150,7 +149,6 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .file-preview img,
@@ -167,6 +165,6 @@ button:hover {
     form {
         position: absolute;
         top: -10%;
-        width: 80%;
+      
     }
 }
