add swip down to exit full screen mode

--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -153,5 +153,52 @@
 			$('#genre').select2({placeholder: 'Sélectionnez un genre', allowClear: true});
 		});
 	</script>
+	<script>
+	document.addEventListener("DOMContentLoaded", function () {
+    const videos = document.querySelectorAll(".video");
+    let touchStartY = 0; 
+    let touchEndY = 0; 
+
+    videos.forEach(video => {
+        video.addEventListener("pointerup", function () {
+            if (video.paused) {
+                video.play();
+            }
+
+            if (video.requestFullscreen) {
+                video.requestFullscreen();
+            } else if (video.webkitRequestFullscreen) { 
+                video.webkitRequestFullscreen();
+            } else if (video.msRequestFullscreen) { 
+                video.msRequestFullscreen();
+            }
+        });
+
+        video.addEventListener("touchstart", function (event) {
+            touchStartY = event.touches[0].clientY;
+        });
+
+        video.addEventListener("touchmove", function (event) {
+            touchEndY = event.touches[0].clientY;
+
+            if (touchEndY - touchStartY > 50) {
+                exitFullscreen();
+            }
+        });
+    });
+
+    function exitFullscreen() {
+        if (document.fullscreenElement || document.webkitFullscreenElement) {
+            if (document.exitFullscreen) {
+                document.exitFullscreen();
+            } else if (document.webkitExitFullscreen) { 
+                document.webkitExitFullscreen();
+            } else if (document.msExitFullscreen) { 
+                document.msExitFullscreen();
+            }
+        }
+    }
+});
+</script>
 	<script src="/../../assets/js/collaboration.js"></script>
 {% endblock %}
