--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -166,9 +166,10 @@
         videos.forEach(video => {
             let touchStartY = 0;
             let touchEndY = 0;
+            let isFullscreen = false;
 
             video.addEventListener("click", function (event) {
-                if (!document.fullscreenElement) {
+                if (!isFullscreen) {
                     if (video.paused) {
                         video.play();
                     } else {
@@ -184,6 +185,14 @@
                     video.webkitRequestFullscreen();
                 } else if (video.msRequestFullscreen) {
                     video.msRequestFullscreen();
+                }
+
+                isFullscreen = true;
+            });
+
+            document.addEventListener("fullscreenchange", function () {
+                if (!document.fullscreenElement) {
+                    isFullscreen = false;
                 }
             });
 
@@ -210,6 +219,7 @@
                     }
                 }
 
+                isFullscreen = false;
                 setTimeout(() => {
                     checkVisibility();
                 }, 500);
@@ -226,11 +236,12 @@
                     video.pause();
                 }
 
-                event.stopPropagation(); 
+                event.stopPropagation();
             });
         });
     });
 </script>
+
 
 
 
