fix beug play pause

--- a/views/pages/collaboration.twig
+++ b/views/pages/collaboration.twig
@@ -198,6 +198,7 @@
                 }
 
                 isFullscreen = true;
+				video.muted = false;
             });
 
             document.addEventListener("fullscreenchange", function () {
