--- a/views/pages/home.twig
+++ b/views/pages/home.twig
@@ -188,6 +188,7 @@
                 }
 
                 isFullscreen = true;
+				video.muted = false;
             });
 
             document.addEventListener("fullscreenchange", function () {
